k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: front
spec:
  gatewayClassName: acme-lb
  listeners:
    - protocol: HTTP
      port: 80
      name: front
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: front
spec:
  parentRefs:
    - name: front
  rules:
    - backendRefs:
        - name: express
          port: 80
